tests/build/widget_new/malformed_fields2.stderr
error: unexpected end of input, expected expression
 --> $DIR/malformed_fields2.rs:6:18
  |
6 |           margin = {
  |  __________________^
7 | |             margin:
8 | |         };
  | |_________^

warning: unused import: `zero_ui::properties::margin`
 --> $DIR/malformed_fields2.rs:1:5
  |
1 | use zero_ui::properties::margin;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
